# process_flow_v2

./: .gitignore  README.md  package-lock.json  package.json
apps/api/: README.md  pyproject.toml
apps/api/src/process_flow_api/: __init__.py  cad_export_worker.py  cad_exporter.py  cdb_exporter.py  cdb_jobs.py  compat.py  configuration_materialization.py  exporter.py  file_export_jobs.py  geometry_preview_exporter.py  geometry_resolver.py  identifiers.py  main.py  models.py  preview_sessions.py  repository.py  seed.py  services.py  workspace_service.py
apps/api/src/process_flow_api/cad/: __init__.py  worker.py
apps/api/src/process_flow_api/fixtures/: geometries.json  process-flow-instances.json  process-flow-templates.json  process-step-templates.json
apps/api/tests/: test_api.py  test_cad_exporter.py  test_geometry_fixtures.py  test_geometry_preview_exporter.py
apps/viewer/: package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.scripts.json  vitest.config.ts
docs/: README.md  conformance.md  contributing.md  data-model.md  geometry-interpretation-context.md  geometry-kernel.md  history.py  overview.md  process-flow-v2.md  process-step.md  process_record.md  project-proposal.md
docs/architecture/: preview-export-pipeline.md  system-overview.md
docs/archive/: project-proposal.md
docs/concepts/: geometry-semantics.md  glossary.md  product-model.md
script/: geometry_viewer.py  main.py  test1.py  test2.py
scripts/: check_docs.py  check_golden_example.py
src/: README.md  index.js  package-lock.json  package.json  tsconfig.json
(+215 files in other folders)
